--- a/src/assets/scss/style.sass
+++ b/src/assets/scss/style.sass
@@ -26,12 +26,20 @@ li, ul
     padding-top: 3em;
     padding-bottom: 4em;
 .comment
-    padding: 20px 0
+    padding: 20px 0;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     .content
         margin-left: 15px;
+/* single page */
+.editPost
+    display: flex;
+    flex-direction: row;
+    margin: 20px 0;
+    button
+        margin: 0 !important;
+        width: 100%;
 /* footer */
 .mainFooter
     display: flex;
